# ragmvp

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
fileloader/: Dockerfile  README.md  pyproject.toml
fileloader/src/fileloader/: base.py  docx.py  file.py  langchain.py  main.py  pdf.py  schema.py  slide.py  tabular.py  utils.py
searchapi/: Dockerfile  pyproject.toml
searchapi/src/searchapi/: config.py  generator.py  lancedb_wrapper.py  main.py  rag.py  retriever.py
src/ragmvp/: config.py  main.py
src/ragmvp/fileloader/: base.py  directory_loader.py  docx.py  file.py  pdf.py  schema.py  slide.py  tabular.py  utils.py
