[project]
name = "ragmvp"
version = "0.1.0"
description = "RAG MVP"
authors = [
    { name = "kzinmr" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.112.1",
    "lancedb>=0.12.0",
    "langchain-core>=0.2.33",
    "langchain-community>=0.2.12",
    "langchain-openai>=0.1.22",
    "langchain-text-splitters>=0.2.2",
    "openpyxl>=3.1.5",
    "pymupdf>=1.24.9",
    "python-pptx>=1.0.2",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "tantivy>=0.22.0",
    "fsspec>=2024.6.1",
    "pandas>=2.2.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "mypy>=1.11.1",
    "pre-commit>=3.8.0",
    "ruff>=0.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
