[project]
name = "ragmvp"
version = "0.1.0"
description = "RAG MVP"
authors = [
    { name = "kzinmr" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.112.1",
    "lancedb>=0.12.0",
    "langchain-core>=0.2.33",
    "langchain-community>=0.2.12",
    "langchain-openai>=0.1.22",
    "langchain-text-splitters>=0.2.2",
    "openpyxl>=3.1.5",
    "pymupdf>=1.24.9",
    "python-pptx>=1.0.2",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "tantivy>=0.22.0",
    "fsspec>=2024.6.1",
    "pandas>=2.2.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "mypy>=1.11.1",
    "pre-commit>=3.8.0",
    "ruff>=0.6.1",
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_reexport = true
strict_equality = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    "^\\.venv",
    "^\\.bzr",
    "^\\.direnv",
    "^\\.eggs",
    "^\\.git",
    "^\\.git-rewrite",
    "^\\.hg",
    "^\\.ipynb_checkpoints",
    "^\\.mypy_cache",
    "^\\.nox",
    "^\\.pants.d",
    "^\\.pyenv",
    "^\\.pytest_cache",
    "^\\.pytype",
    "^\\.ruff_cache",
    "^\\.svn",
    "^\\.tox",
    "^\\.venv",
    "^\\.vscode",
    "^__pypackages__",
    "^_build",
    "^buck-out",
    "^build",
    "^dist",
    "^node_modules",
    "^site-packages",
    "^docs",
    "^shared",
    "^log",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
