[project]
name = "ragmvp"
version = "0.1.0"
description = "RAG MVP"
authors = [
    { name = "kzinmr" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "mypy>=1.11.1",
    "pre-commit>=3.8.0",
    "ruff>=0.6.1",
]

[tool.uv.workspace]
members = ["fileloader", "api"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_reexport = true
strict_equality = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    "^\\.venv",
    "^\\.bzr",
    "^\\.direnv",
    "^\\.eggs",
    "^\\.git",
    "^\\.git-rewrite",
    "^\\.hg",
    "^\\.ipynb_checkpoints",
    "^\\.mypy_cache",
    "^\\.nox",
    "^\\.pants.d",
    "^\\.pyenv",
    "^\\.pytest_cache",
    "^\\.pytype",
    "^\\.ruff_cache",
    "^\\.svn",
    "^\\.tox",
    "^\\.venv",
    "^\\.vscode",
    "^__pypackages__",
    "^_build",
    "^buck-out",
    "^build",
    "^dist",
    "^node_modules",
    "^site-packages",
    "^docs",
    "^shared",
    "^log",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
