[project]
name = "searchapi"
version = "0.1.0"
description = "RAG API deployed with pre-built dataset."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.112.1",
    "lancedb>=0.12.0",
    "langchain-core>=0.2.33",
    "langchain-openai>=0.1.22",
    "langchain-text-splitters>=0.2.2",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "tantivy>=0.22.0",
    "pandas>=2.2.2",
    "simsimd>=5.0.1",
    "duckdb>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
